# todo

./: pyproject.toml
tasks/: models.py  urls.py  views.py
tasks/migrations/: 0001_created_task_model.py
templates/: base.html
templates/account/: ReadMy.txt
templates/allauth/layouts/: base.html
templates/tasks/: index.html  todo_list.html  todoitem_confirm_delete.html  todoitem_form.html  todolist_confirm_delete.html  todolist_form.html
todo/: settings.py  urls.py
users/migrations/: 0001_created_user_model.py
