[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["larsanik <larsanik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.3"
django-allauth = "^65.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
